--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+   <div class="background">
+
+   </div>
+   <img src="images/Bird.png" alt="invalid-img" class="bird" id="bird-1">
+   <div class="message">
+        Enter to Start Game <p><span style="color:red">&uarr;</span>ArrowUp to Control </p>
+   </div>
+   <div class="score">
+        <span class="score_title"></span>
+        <span class="score_val"></span>
+   </div>
 </body>
 </html>
